k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  namespace: ecommerce
  labels:
    app: ecommerce-app
spec:
  type: ClusterIP
  selector:
    app: ecommerce-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
